[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "id"
dynamic = ["version"]
description = "A tool for generating OIDC identities"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "pydantic",
  "requests",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://pypi.org/project/id/"
Issues = "https://github.com/di/id/issues"
Source = "https://github.com/di/id"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pretend",
  "coverage[toml]",
]
lint = [
  "bandit",
  "black",
  "isort",
  "interrogate",
  "mypy",
  # NOTE(ww): ruff is under active development, so we pin conservatively here
  # and let Dependabot periodically perform this update.
  "ruff < 0.0.286",
  "types-requests",
  # Needed for protocol typing in 3.7; remove when our minimum Python is 3.8.
  "typing-extensions; python_version < '3.8'",
]
dev = [
  "build",
  "bump >= 1.3.2",
  "id[test,lint]",
]

[tool.isort]
multi_line_output = 3
known_first_party = "id"
include_trailing_comma = true

[tool.interrogate]
# don't enforce documentation coverage for packaging, testing, the virtual
# environment, or the CLI (which is documented separately).
ignore-semiprivate = true
ignore-private = true
# Ignore nested classes for docstring coverage because we use them primarily
# for pydantic model configuration.
ignore-nested-classes = true
fail-under = 100

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[tool.bandit]
exclude_dirs = ["./test"]

[tool.ruff]
line-length = 100
# TODO: Enable "UP" here once Pydantic allows us to:
# See: https://github.com/pydantic/pydantic/issues/4146
select = ["E", "F", "W"]
target-version = "py37"
